Feat: Get Project by ID endpoint and some swagger annotations fix
